[B]Version 1.1.58[/B]
freeomovie - fix categories