@@ -1,3 +1,0 @@
-Site URL: https://www.ghettotube.com/
-Contact: traffictitan@gmail.com
-DMCA : https://www.ghettotube.com/dmca/
